# sbdataextraction

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  sbdataextraction.rst
sbdataextraction/: sbdataextraction.py
tests/: test_sbdataextraction.py
