[tool.poetry]
name = "sbdataextraction"
version = "0.1.0"
description = "Package to get statsbomb public data into python"
authors = ["Rob Blumberg <robertblumberg97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
