[tool.poetry]
name = "sbdataextraction"
version = "0.1.0"
description = "Package to get statsbomb public data into python"
authors = ["Rob Blumberg <robertblumberg97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
requests = "^2.23.0"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
