[tool.poetry]
name = "sbdataextraction"
version = "0.1.7"
description = "Package to get statsbomb public data into python"
authors = ["Rob Blumberg <robertblumberg97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
requests = "^2.23.0"
numpy = "^1.18.2"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
python-semantic-release = "^5.0.2"

[tool.semantic_release]
version_variable = "sbdataextraction/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
